k8/problems.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: problems-deployment
  labels:
    app: problems
spec:
  replicas: 1
  selector:
    matchLabels:
      app: problems
  template:
    metadata:
      labels:
        app: problems
    spec:
      containers:
      - name: problems
        image: kjunmin/oj-problems:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: problems-service
spec:
  selector:
    app: problems
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
